--- a/K8s/deployment.yaml
+++ b/K8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: my-web-page
-        image: gachango/moringa-image:blue
+        image: gachango/moringa-image:latest
         ports:
         - containerPort: 80
