--- a/K8s/deployment.yaml
+++ b/K8s/deployment.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
       - name: my-web-page
         image: gachango/moringa-image:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
