--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -40,4 +40,4 @@ jobs:
           git push
         env:
           username: ${{ secrets.GITHUB_USERNAME }}
-          your-github-token: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
