--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Checkout code
         run: |
-          git clone https://username:<your-github-token>@github.com/Moringa-Argo/repo.git
+          git clone https://${{ secrets.GITHUB_USERNAME }}:${{ secrets.GITHUB_TOKEN }}@github.com/Moringa-Argo/repo.git
           cd repo/K8s
           sed -i 's|image: gachango/moringa-image:[0-9a-f]*|image: gachango/moringa-image:${{ github.sha }}|' deployment.yaml
           git config --global user.email "gachangocmbugua@gmail.com"
