--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Checkout code
         run: |
-          git clone https://${{ secrets.GITHUB_USERNAME }}:${{ secrets.DOCKER_TOKEN }}@github.com/CharlesGM/Moringa-Argo.git
+          git clone https://${{ secrets.USERNAME }}:${{ secrets.DOCKER_TOKEN }}@github.com/CharlesGM/Moringa-Argo.git
           cd K8s
           sed -i 's|image: gachango/moringa-image:[0-9a-f]*|image: gachango/moringa-image:${{ github.sha }}|' deployment.yaml
           git config --global user.email "gachangocmbugua@gmail.com"
