--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -40,4 +40,4 @@ jobs:
           git push
         env:
           username: CharlesGM
-          password: ${{ secrets.DOCKER_TOKEN }}
+          password: ${{ secrets.TOKEN }}
