--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -26,19 +26,19 @@ jobs:
         with:
           context: .
           push: true
-          tags: gachango/moringa-image:${{ github.sha }}
+          tags: gachango/moringa-image:purple
 
-      - name: Checkout code
-        env:
-          username: CharlesGM
-          password: ${{ secrets.TOKEN }}
-        run: |
-          git clone https://$username:$password@github.com/CharlesGM/Moringa-Argo.git
-          cd K8s
-          sed -i 's|image: gachango/moringa-image:[0-9a-f]*|image: gachango/moringa-image:${{ github.sha }}|' deployment.yaml
-          git config --global user.email "gachangocmbugua@gmail.com"
-          git config --global user.name "CharlesGM"
-          git add deployment.yaml
-          git commit -m "Update image tag"
-          git push
+#      - name: Checkout code
+#        env:
+#          username: CharlesGM
+#          password: ${{ secrets.TOKEN }}
+#        run: |
+#          git clone https://$username:$password@github.com/CharlesGM/Moringa-Argo.git
+#          cd K8s
+#          sed -i 's|image: gachango/moringa-image:[0-9a-f]*|image: gachango/moringa-image:${{ github.sha }}|' deployment.yaml
+#          git config --global user.email "gachangocmbugua@gmail.com"
+#          git config --global user.name "CharlesGM"
+#          git add deployment.yaml
+#          git commit -m "Update image tag"
+#          git push
 
