--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: gachango/moringa-image:orange
+          tags: gachango/moringa-image:olive
 
 #      - name: Checkout code
 #        env:
