--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: gachango/moringa-image:peachpuff
+          tags: gachango/moringa-image:mediumturquoise
 
 #      - name: Checkout code
 #        env:
